Fix line overflow problem

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   width: calc(100% - 20px); left: 20px;
   height: 100%;
   max-height: 8000%; top: 0;
+  max-width: 8000%;
   background-color: #1b1d1e;
   padding: 0px;
   margin: 0;
@@ -19,6 +20,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%; top: 0;
+  width: 200000px;
   outline-style: none;
   border: 0;
   text-align: left;
